# routes/address.js
@@ -11,26 +11,52 @@ const db = require('../utils/utils').knex
 
 // Get address by id
 router.get('/:address',
-  [
-    check('address')
-      .not().isEmpty()
-      .isLength({
-        min: 35,
-        max: 35
-      })
-  ],
-  validateInput,
-  async function (req, res, next) {
-    try {
-      const getAddress = await db('addresses')
-        .select(db.raw('*, date_format(updated,"%Y-%m-%d %h:%i:%s") as updated'))
-        .where('address', req.params.address)
-        .limit(1)
+[
+  check('address')
+    .not().isEmpty()
+    .isLength({
+      min: 35,
+      max: 35
+    })
+],
+validateInput,
+async function (req, res, next) {
+  try {
+    const getAddress = await db('addresses')
+      .select(db.raw('*, date_format(updated,"%Y-%m-%d %h:%i:%s") as updated'))
+      .where('address', req.params.address)
+      .limit(1)
 
-      res.json(getAddress[0])
-    } catch (err) {
-      next(err)
-    }
-  })
+    res.json(getAddress[0])
+  } catch (err) {
+    next(err)
+  }
+})
+
+
+// Get address by regular balance listed desc
+router.get('/top/:amount',
+[
+  check('amount')
+    .not().isEmpty()
+    .isInt({
+      min: 1,
+      max: 1000
+    })
+],
+validateInput,
+async function (req, res, next) {
+  try {
+    const getTop = await db('addresses')
+      .select(db.raw('*, date_format(updated,"%Y-%m-%d %h:%i:%s") as updated'))
+      .orderBy('regular', 'desc')
+      .limit(req.params.amount)
+
+    res.json(getTop)
+  } catch (err) {
+    next(err)
+  }
+})
+
 
 module.exports = router
